@@ -1,7 +1,11 @@
 Version 0.19 ( )
 -------------------------------
 
-- Bug #2064371 pointed out that the SSH2 banner may not use dash ('-').
+- Based on a patch in bug #1878059 by Steven Ayre libssh2 now parses >2GB file
+  sizes when downloading SCP files.
+
+- Bug #2064371 pointed out that the SSH2 banner may not use dash ('-'). Reported
+  by Bjorn Stenborg.
 
 - Sean Peterson fixed a key re-exchange bug:
   http://daniel.haxx.se/projects/libssh2/mail/libssh2-devel-archive-2008-06/0002.shtml
